# ProceduralAnimations

./: CMakeLists.txt  README.md
src/: Creature.cpp  Creature.h  QuickMenu.cpp  QuickMenu.h  Segment.cpp  Segment.h  main.cpp
src/Creatures/: Creature.cpp  Creature.h  FruitCreature.cpp  FruitCreature.h  PredatorCreature.cpp  PredatorCreature.h  Segment.cpp  Segment.h  VeganCreature.cpp  VeganCreature.h
